--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "mypy>=1.18.2",
+    "pre-commit>=4.3.0",
     "ruff>=0.14.3",
 ]
