--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,12 @@ requires-python = ">=3.13"
 dependencies = [
     "mypy>=1.18.2",
     "pre-commit>=4.3.0",
+    "pydantic>=2.12.3",
+    "pytest>=8.4.2",
     "ruff>=0.14.3",
+]
+
+[tool.uv.workspace]
+members = [
+    "yaml",
 ]
