--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic>=2.12.3",
     "pytest>=8.4.2",
     "ruff>=0.14.3",
+    "streamlit>=1.51.0",
 ]
 
 [tool.uv.workspace]
