feature: add makefile for simplifying the setup
Define makefile Targets to shorten often used shell commands, e.g. for setting up the project.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,10 @@ dependencies = [
 members = [
     "yaml",
 ]
+
+# Tell uv to find package root folder
+[tool.setuptools]
+packages = [
+    "dashboard", 
+    "src"
+]
